--- a/styles/style.css
+++ b/styles/style.css
@@ -772,3 +772,49 @@ html, body{
     scale: 0.3;
     margin-top: -2rem;
 }
+
+.form-section{
+    width: 80%;
+    height: 80vh;
+    position: relative;
+    left: 10%;
+    margin-top: 10rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    box-shadow: 0 10px 60px #dadada;
+    margin-bottom: 15rem;
+}
+
+.form-details-singular{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+}
+
+.contact-form{
+    width: 50%;
+    align-self: flex-start;
+    margin-top: 5%;
+}
+
+.contact-form p{
+    margin-left: -0.5rem;
+}
+
+.contact-form input{
+    width: 13rem;
+    margin-right: 1rem;
+    padding: 5px;
+    border: 1px solid rgb(192, 192, 192);
+}
+
+.contact-form textarea{
+    width: 85%;
+    height: 15vh;
+    border: 1px solid rgb(192, 192, 192);
+}
