--- a/styles/config.css
+++ b/styles/config.css
@@ -29,9 +29,46 @@
   }
 }
 
-@media(max-width: 768px){
-  .info-container{
-    height: 40rem;
-    margin-bottom: 100px;
+/* !media queries */
+@media (max-width: 992px) {
+  .memeber-name h5 {
+      font-size: 16px;
+  }
+
+  .memeber-name p {
+      font-size: 12px;
+  }
+
+
+  .pricing-cards-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pricing-card {
+      width: 80%;
+      margin-bottom: 2rem;
+  }
+
+}
+
+@media (max-width: 576px) {
+  .memeber-name h5 {
+      font-size: 14px;
+  }
+
+  .memeber-name p {
+      font-size: 11px;
   }
 }
+
+@media (max-width: 768px) {
+  .orange-bar {
+      opacity: 1;
+      transform: translateY(0);
+  }
+  .price-box h1 {
+    font-size: 50px;
+  }
+}
+
