--- a/styles/style.css
+++ b/styles/style.css
@@ -651,8 +651,8 @@ html, body{
 
 .footer-section{
     background-color: var(--main-dark-blue);
-    height: 30rem;
     color: white;
+    padding: 4rem 0;
 }
 
 .first-foot-contents{
@@ -660,7 +660,6 @@ html, body{
     flex-wrap: wrap;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 30%;
 }
 
 .footer-icons{
@@ -672,7 +671,6 @@ html, body{
     flex-wrap: wrap;
     flex-direction: column;
     margin-top: 1.5rem;
-    margin-left: -7rem;
 }
 
 .quick-links a, .our-services-links a{
@@ -699,7 +697,6 @@ html, body{
     flex-wrap: wrap;
     flex-direction: column;
     margin-top: 1.5rem;
-    margin-left: -7rem;
 }
 
 .forth-footer-col input{
@@ -718,17 +715,20 @@ html, body{
     flex-wrap: wrap;
     flex-direction: column;
     margin-top: 1.5rem;
-    margin-left: -5rem;
-    width: 90%;
+    width: 100%;
+    max-width: 100%;
 }
 
 .copyright-claim{
     background-color: rgb(45, 44, 48);
     color: white;
-    margin: auto -11px auto -11px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: smaller;
+    padding: 1rem 2rem;
+    flex-wrap: wrap;
+    margin: auto -11px auto -11px;
 }
 
 .copyright-links a{
@@ -802,19 +802,14 @@ html, body{
 }
 
 .form-section{
-    width: 80%;
-    height: 80vh;
-    position: relative;
-    left: 10%;
-    margin-top: 10rem;
+    width: 90%;
+    margin: 10rem auto 15rem auto;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
     gap: 4rem;
+    padding: 3rem;
     box-shadow: 0 10px 60px #dadada;
-    margin-bottom: 15rem;
 }
 
 .form-details-singular{
@@ -824,10 +819,15 @@ html, body{
     align-items: center;
 }
 
+.form-details{
+    flex: 1 1 300px;
+}
+
 .contact-form{
     width: 50%;
     align-self: flex-start;
     margin-top: 5%;
+    flex: 1 1 400px;
 }
 
 .contact-form p{
@@ -835,14 +835,15 @@ html, body{
 }
 
 .contact-form input{
-    width: 13rem;
-    margin-right: 1rem;
-    padding: 5px;
+    width: 100%;
+    padding: 0.7rem;
+    margin-bottom: 1rem;
     border: 1px solid rgb(192, 192, 192);
 }
 
 .contact-form textarea{
-    width: 85%;
-    height: 15vh;
+    width: 100%;
+    height: 150px;
+    padding: 0.7rem;
     border: 1px solid rgb(192, 192, 192);
 }
